--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
       <div class="rounded-xl overflow-hidden shadow-md border hover:shadow-lg transition">
         <a href="https://gckhq.org" target="_blank" rel="noopener noreferrer" 
           class="block rounded-xl overflow-hidden shadow-md border hover:shadow-lg transition">
-          <img src="/Pics/GCK.png" 
+          <img src="/Pics/GCK.svg" 
               alt="Global Crusade with Kumuyi (GCK)" 
               class="w-full h-auto object-cover">
         </a>
