--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <h1 class="script-font text-3xl sm:text-4xl md:text-6xl lg:text-7xl font-bold leading-tight">
       Deeper Life Bible Church Rochester, NY
     </h1>
-    <p class="text-sm sm:text-base md:text-lg lg:text-2xl max-w-2xl text-gray-200">
+    <p class="text-md sm:text-base md:text-lg lg:text-2xl max-w-2xl text-gray-200">
       Holiness unto the Lord is our watchword and song — a call to purity, a life of purpose,
       and a passion for reaching the lost with the message of salvation.
     </p>
