--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
   <div class="absolute inset-0 bg-black/80 z-10"></div>
 
   <!-- Hero Text Content -->
-  <div class="absolute inset-0 z-20 flex flex-col items-center justify-center text-center text-white px-6 space-y-6">
-    <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold">Welcome to</h3>
-    <h1 class="script-font text-3xl sm:text-4xl md:text-6xl lg:text-7xl font-bold leading-tight">
+  <div class="absolute inset-0 z-20 flex flex-col items-center justify-center text-center text-white px-6 space-y-2 md:space-y-6">
+    <h3 class="sm:text-xl md:text-2xl lg:text-3xl font-medium mb-0">Welcome to</h3>
+    <h1 class="script-font text-3xl sm:text-4xl md:text-6xl lg:text-7xl font-bold leading-tight mt-0">
       Deeper Life Bible Church Rochester, NY
     </h1>
-    <p class="text-md sm:text-base md:text-lg lg:text-2xl max-w-2xl text-gray-200">
+    <p class="text-lg sm:text-base md:text-lg lg:text-2xl max-w-2xl text-gray-200">
       Holiness unto the Lord is our watchword and song — a call to purity, a life of purpose,
       and a passion for reaching the lost with the message of salvation.
     </p>
