--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
   <!-- Hero Text Content -->
   <div class="absolute inset-0 z-20 flex flex-col items-center justify-center text-center text-white space-y-6">
-    <h3 class="sm:text-xl md:text-2xl lg:text-3xl font-medium mb-0">Welcome to</h3>
-    <h1 class="script-font text-3xl sm:text-4xl md:text-6xl lg:text-7xl font-bold leading-tight mt-0">
+    <h3 class="sm:text-2xl md:text-2xl lg:text-3xl font-medium mb-0">Welcome to</h3>
+    <h1 class="script-font text-5xl md:text-6xl lg:text-7xl font-bold leading-tight mt-0">
       Deeper Life Bible Church Rochester, NY
     </h1>
     <p class="text-xl sm:text-base md:text-lg lg:text-2xl max-w-2xl text-gray-200 p-1">
