--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Logo -->
     <a href="index.html" class="flex items-center space-x-2">
       <img src="/Pics/logo.png" alt="Logo" class="h-10 w-10 object-contain">
-      <span class="script-font text-3xl md:text-4xl font-bold text-black-900">Deeper Life Bible Church Rochester NY</span>
+      <span class="script-font text-4xl md:text-5xl font-bold text-black-900">Deeper Life Bible Church Rochester NY</span>
     </a>
 
     <!-- Nav Links -->
@@ -133,15 +133,20 @@
   <div class="absolute inset-0 bg-black/70 z-10"></div>
 
   <!-- Hero Text Content -->
-  <div class="absolute inset-0 z-20 flex flex-col items-center justify-center text-center text-white space-y-6">
-    <h3 class="text-2xl md:text-2xl lg:text-3xl mb-0">Welcome to</h3>
-    <h1 class="script-font text-5xl md:text-6xl lg:text-7xl font-bold leading-tight mt-0">
-      Deeper Life Bible Church Rochester, NY
-    </h1>
-    <p class="text-2xl md:text-2xl lg:text-3xl max-w-2xl text-white p-1">
-      Holiness unto the Lord is our watchword and song. This is a call to purity, a life of purpose,
-      and a passion for reaching the lost with the message of salvation.
+  <div class="absolute inset-0 z-20 flex flex-col items-center justify-center text-center text-white px-6 space-y-6">
+
+    <div class="flex flex-col items-center leading-tight">
+      <h3 class="text-2xl md:text-3xl font-bold mb-1">Welcome to</h3>
+      <h1 class="script-font text-5xl md:text-6xl lg:text-7xl font-bold leading-tight">
+        Deeper Life Bible Church Rochester, NY
+      </h1>
+    </div>
+
+    <p class="text-2xl md:text-3xl max-w-2xl text-gray-200">
+      Holiness unto the Lord is our watchword and song — a call to purity,
+      a life of purpose, and a passion for reaching the lost with the message of salvation.
     </p>
+
 
 <!-- Days of Meeting (hidden on mobile) -->
 <div class="hidden md:flex flex-row items-center justify-center gap-6 mt-10 bg-white/10 backdrop-blur-lg border border-white/30 rounded-lg md:rounded-xl p-6">
