--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 </nav>
 
 <!-- Info Bar -->
-<section class="bg-[#061c36] text-white mt-24 md:mt-16 text-md py-4 mt-16 md:fixed top-0 left-0 z-50 w-full">
+<section class="bg-[#061c36] text-white mt-24 md:mt-20 text-md py-4 md:fixed top-0 left-0 z-50 w-full">
   <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-right justify-between gap-6 md:gap-0">
     
     <!-- Address -->
-    <div class="flex items-center gap-3">
+    <div class="flex items-center gap-3 mt-4 md:mt-0">
       <img src="/icons/location.svg" alt="Address" class="h-8 w-8">
       <div>
         <p class="font-semibold">Address</p>
