--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <!-- Logo -->
     <a href="index.html" class="flex items-center space-x-2">
-      <img src="/Pics/logo.png" alt="Logo" class="h-10 w-10 object-contain">
+      <img src="./Pics/logo.png" alt="Logo" class="h-10 w-10 object-contain">
       <span class="script-font text-4xl md:text-5xl font-bold text-black-900">Deeper Life Bible Church Rochester NY</span>
     </a>
 
@@ -35,7 +35,7 @@
     <!-- Mobile Menu Button -->
 
     <button id="menu-btn" class="md:hidden focus:outline-none">
-      <img src="/Icons/hamburger.svg" alt="Menu" class="h-6 w-6">
+      <img src="./Icons/hamburger.svg" alt="Menu" class="h-6 w-6">
     </button>
   </div>
 
@@ -65,7 +65,7 @@
     
     <!-- Address -->
     <div class="flex items-center gap-3 mt-4 md:mt-0">
-      <img src="/icons/location.svg" alt="Address" class="h-8 w-8">
+      <img src="./icons/location.svg" alt="Address" class="h-8 w-8">
       <div>
         <p class="font-semibold">Address</p>
         <a href="https://maps.app.goo.gl/DWS2Xr3d57TEEyFD9" target="_blank" rel="noopener noreferrer" class="hover:text-white text-gray-300">
@@ -78,7 +78,7 @@
 
     <!-- Phone -->
     <div class="flex items-center gap-3">
-      <img src="/icons/phone.svg" alt="Phone" class="h-8 w-8">
+      <img src="./icons/phone.svg" alt="Phone" class="h-8 w-8">
       <div>
         <p class="font-semibold">Phone</p>
         <p class="text-gray-300">+1 (585) 260-1943</p>
@@ -89,7 +89,7 @@
 
     <!-- Email -->
     <div class="flex items-center gap-3">
-      <img src="/icons/mail.svg" alt="Email" class="h-8 w-8">
+      <img src="./icons/mail.svg" alt="Email" class="h-8 w-8">
       <div>
         <p class="font-semibold">Email</p>
         <a href="mailto:dlbcrochester@gmail.com" class="hover:text-white text-gray-300">dlbcrochester@gmail.com</a>
@@ -104,28 +104,28 @@
   <!-- =================== DESKTOP CAROUSEL =================== -->
   <div class="hidden md:block relative w-full h-[100vh] overflow-hidden z-0">
     <div class="absolute inset-0 w-full h-full">
-      <img src="/Pics/12.jpg" class="absolute inset-0 w-full h-full object-cover animate-fade" />
-      <img src="/Pics/1.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[5s]" />
-      <img src="/Pics/2.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[10s]" />
-      <img src="/Pics/3.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[15s]" />
-      <img src="/Pics/4.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[20s]" />
-      <img src="/Pics/6.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[25s]" />
-      <img src="/Pics/11.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[30s]" />
-      <img src="/Pics/5.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[35s]" />
+      <img src="./Pics/12.jpg" class="absolute inset-0 w-full h-full object-cover animate-fade" />
+      <img src="./Pics/1.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[5s]" />
+      <img src="./Pics/2.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[10s]" />
+      <img src="./Pics/3.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[15s]" />
+      <img src="./Pics/4.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[20s]" />
+      <img src="./Pics/6.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[25s]" />
+      <img src="./Pics/11.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[30s]" />
+      <img src="./Pics/5.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade delay-[35s]" />
     </div>
   </div>
 
   <!-- =================== MOBILE CAROUSEL =================== -->
   <div class="block md:hidden relative w-full h-[90vh] overflow-hidden z-0">
     <div class="absolute inset-0 w-full h-full">
-      <img src="/Pics/20.jpg" class="absolute inset-0 w-full h-full object-cover animate-fade-mobile" />
-      <img src="/Pics/21.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[5s]" />
-      <img src="/Pics/22.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[10s]" />
-      <img src="/Pics/23.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[15s]" />
-      <img src="/Pics/24.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[20s]" />
-      <img src="/Pics/28.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[25s]" />
-      <img src="/Pics/26.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[30s]" />
-      <img src="/Pics/27.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[35s]" />
+      <img src="./Pics/20.jpg" class="absolute inset-0 w-full h-full object-cover animate-fade-mobile" />
+      <img src="./Pics/21.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[5s]" />
+      <img src="./Pics/22.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[10s]" />
+      <img src="./Pics/23.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[15s]" />
+      <img src="./Pics/24.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[20s]" />
+      <img src="./Pics/28.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[25s]" />
+      <img src="./Pics/26.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[30s]" />
+      <img src="./Pics/27.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 animate-fade-mobile delay-[35s]" />
     </div>
   </div>
 
@@ -307,7 +307,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <!-- Sunday -->
       <div class="relative w-full max-w-sm h-80 rounded-lg overflow-hidden group cursor-pointer mx-auto">
-        <img class="w-full h-full object-cover" src="/Pics/2.jpg" alt="choristers singing" />
+        <img class="w-full h-full object-cover" src="./Pics/2.jpg" alt="choristers singing" />
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
           <img src="/icons/church.svg" alt="church icon" class="h-12 w-12 mb-2">
@@ -319,7 +319,7 @@
 
       <!-- Tuesday -->
       <div class="relative w-full max-w-sm h-80 rounded-lg overflow-hidden group cursor-pointer mx-auto">
-        <img class="w-full h-full object-cover" src="/Pics/Bible.jpg" alt="choristers singing" />
+        <img class="w-full h-full object-cover" src="./Pics/Bible.jpg" alt="choristers singing" />
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
           <img src="/icons/bible.svg" alt="church icon" class="h-12 w-12 mb-2">
@@ -330,7 +330,7 @@
 
       <!-- Friday -->
       <div class="relative w-full max-w-sm h-80 rounded-lg overflow-hidden group cursor-pointer mx-auto">
-        <img class="w-full h-full object-cover" src="/Pics/Revival.jpg" alt="choristers singing" />
+        <img class="w-full h-full object-cover" src="./Pics/Revival.jpg" alt="choristers singing" />
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
           <img src="/icons/fire.svg" alt="fire icon" class="h-12 w-12 mb-2">
@@ -357,7 +357,7 @@
     <!-- Pastor Image -->
     <div class="relative bg-white rounded-lg shadow p-2 rotate-1 hover:rotate-0 hover:scale-105 transition-transform duration-300 ease-in-out mx-auto w-full max-w-sm md:max-w-md">
       <img 
-        src="/Pics/pastor_new.jpg" 
+        src="./Pics/pastor_new.jpg" 
         alt="Pastor Bolaji Thomas portrait" 
         class="w-full h-full object-cover rounded-lg object-top">
     </div>
