--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
     <!-- Address -->
     <div class="flex items-center gap-3 mt-4 md:mt-0">
-      <img src="./icons/location.svg" alt="Address" class="h-8 w-8">
+      <img src="./Icons/location.svg" alt="Address" class="h-8 w-8">
       <div>
         <p class="font-semibold">Address</p>
         <a href="https://maps.app.goo.gl/DWS2Xr3d57TEEyFD9" target="_blank" rel="noopener noreferrer" class="hover:text-white text-gray-300">
@@ -78,7 +78,7 @@
 
     <!-- Phone -->
     <div class="flex items-center gap-3">
-      <img src="./icons/phone.svg" alt="Phone" class="h-8 w-8">
+      <img src="./Icons/phone.svg" alt="Phone" class="h-8 w-8">
       <div>
         <p class="font-semibold">Phone</p>
         <p class="text-gray-300">+1 (585) 260-1943</p>
@@ -89,7 +89,7 @@
 
     <!-- Email -->
     <div class="flex items-center gap-3">
-      <img src="./icons/mail.svg" alt="Email" class="h-8 w-8">
+      <img src="./Icons/mail.svg" alt="Email" class="h-8 w-8">
       <div>
         <p class="font-semibold">Email</p>
         <a href="mailto:dlbcrochester@gmail.com" class="hover:text-white text-gray-300">dlbcrochester@gmail.com</a>
@@ -310,7 +310,7 @@
         <img class="w-full h-full object-cover" src="./Pics/2.jpg" alt="choristers singing" />
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
-          <img src="/icons/church.svg" alt="church icon" class="h-12 w-12 mb-2">
+          <img src="./Icons/church.svg" alt="church icon" class="h-12 w-12 mb-2">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Sunday Worship Service</h3>
           <p class="text-lg max-w-xs font-medium">Sundays @ 9:45 AM ET</p>
         </div>
@@ -322,7 +322,7 @@
         <img class="w-full h-full object-cover" src="./Pics/Bible.jpg" alt="choristers singing" />
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
-          <img src="/icons/bible.svg" alt="church icon" class="h-12 w-12 mb-2">
+          <img src="./Icons/bible.svg" alt="church icon" class="h-12 w-12 mb-2">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Tuesday Bible Study</h3>
           <p class="text-lg max-w-xs font-medium">Tuesdays @ 6:00 PM ET</p>
         </div>
@@ -333,7 +333,7 @@
         <img class="w-full h-full object-cover" src="./Pics/Revival.jpg" alt="choristers singing" />
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
-          <img src="/icons/fire.svg" alt="fire icon" class="h-12 w-12 mb-2">
+          <img src="./Icons/fire.svg" alt="fire icon" class="h-12 w-12 mb-2">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Friday Revival Hour</h3>
           <p class="text-lg max-w-xs font-medium">Fridays @ 6:00 PM ET</p>
         </div>
@@ -409,21 +409,21 @@
 
       <!-- Children's Bible Club -->
       <div class="rounded-xl overflow-hidden shadow-md border hover:shadow-lg transition">
-        <img src="/Pics/Children.svg" 
+        <img src="./Pics/Children.svg" 
              alt="DLBC Rochester Children Ministry Bible Club" 
              class="w-full h-auto object-cover">
       </div>
 
       <!-- Upstate Connect -->
       <div class="rounded-xl overflow-hidden shadow-md border hover:shadow-lg transition">
-        <img src="/Pics/Upstate.svg" 
+        <img src="./Pics/Upstate.svg" 
              alt="Upstate Connect - DLBC Rochester Young Adults Ministry" 
              class="w-full h-auto object-cover">
       </div>
 
       <!-- Monthly Vigil -->
       <div class="rounded-xl overflow-hidden shadow-md border hover:shadow-lg transition">
-        <img src="/Pics/Vigil.svg" 
+        <img src="./Pics/Vigil.svg" 
              alt="Monthly Vigil - DLBC Rochester" 
              class="w-full h-auto object-cover">
       </div>
@@ -433,7 +433,7 @@
       <div class="rounded-xl overflow-hidden shadow-md border hover:shadow-lg transition">
         <a href="https://gckhq.org" target="_blank" rel="noopener noreferrer" 
           class="block rounded-xl overflow-hidden shadow-md border hover:shadow-lg transition">
-          <img src="/Pics/GCK.svg" 
+          <img src="./Pics/GCK.svg" 
               alt="Global Crusade with Kumuyi (GCK)" 
               class="w-full h-auto object-cover">
         </a>
@@ -605,7 +605,7 @@
     
     <!-- Rochester -->
     <div class="bg-white rounded-xl shadow- p-8 text-center border border-gray-200">
-      <img src="/icons/blue-location-logo.svg" alt="Rochester" class="h-10 w-10 mx-auto mb-2">
+      <img src="./Icons/blue-location-logo.svg" alt="Rochester" class="h-10 w-10 mx-auto mb-2">
       <h3 class="text-xl font-semibold text-061c36 mb-2">Rochester, NY</h3>
       <p class="text-gray-600 text-lg mb-3">3699 West Henrietta Road,<br/>Rochester, NY 14623</p>
       <!-- <p class="text-gray-600 text-lg mb-2">(585) 260-1943</p>
@@ -616,7 +616,7 @@
 
     <!-- Buffalo -->
     <div class="bg-white rounded-xl shadow- p-8 text-center border border-gray-200">
-      <img src="/icons/blue-location-logo.svg" alt="Buffalo" class="h-10 w-10 mx-auto mb-3">
+      <img src="./Icons/blue-location-logo.svg" alt="Buffalo" class="h-10 w-10 mx-auto mb-3">
       <h3 class="text-xl font-semibold text-061c36 mb-2">Buffalo, NY</h3>
       <p class="text-gray-600 text-lg mb-3">1138 Millersport Highway,<br/>Buffalo, NY 14226</p>
       <a href="https://maps.app.goo.gl/gDEQ2PDXxi1dS7CY7" target="_blank"
@@ -625,7 +625,7 @@
 
     <!-- Potsdam -->
     <div class="bg-white rounded-xl shadow- p-8 text-center border border-gray-200">
-      <img src="/icons/blue-location-logo.svg" alt="Potsdam" class="h-10 w-10 mx-auto mb-3">
+      <img src="./Icons/blue-location-logo.svg" alt="Potsdam" class="h-10 w-10 mx-auto mb-3">
       <h3 class="text-xl font-semibold text-061c36 mb-2">Potsdam, NY</h3>
       <p class="text-gray-600 text-lg mb-3">208 Swan St,<br/>Potsdam, NY 13676</p>
       <a href="https://maps.app.goo.gl/Loz4nztdJNNEJxbZA" target="_blank"
@@ -649,13 +649,13 @@
      <div class="space-y-3">
       <!-- Church Logo -->
       <div class="flex items-center space-x-3 mb-4">
-        <img src="/Pics/logo.png" alt="Church Logo" class="h-12 w-12 object-contain">
+        <img src="./Pics/logo.png" alt="Church Logo" class="h-12 w-12 object-contain">
         <h3 class="script-font text-2xl font-semibold text-white">Deeper Life Bible Church Rochester NY</h3>
       </div>
 
       <!-- Address -->
       <div class="flex items-start space-x-3">
-        <img src="/icons/location.svg" alt="Map Icon" class="h-6 w-6">
+        <img src="./Icons/location.svg" alt="Map Icon" class="h-6 w-6">
         <p class="text-lg">
           3699 West Henrietta Road,<br/>Rochester, NY 14623
         </p>
@@ -663,13 +663,13 @@
 
       <!-- Phone -->
       <div class="flex items-center space-x-3">
-        <img src="/icons/phone.svg" alt="Phone Icon" class="h-6 w-6">
+        <img src="./Icons/phone.svg" alt="Phone Icon" class="h-6 w-6">
         <p class="text-lg">+1 (585) 260-1943</p>
       </div>
 
       <!-- Email -->
       <div class="flex items-center space-x-3">
-        <img src="/icons/mail.svg" alt="Mail Icon" class="h-6 w-6">
+        <img src="./Icons/mail.svg" alt="Mail Icon" class="h-6 w-6">
         <p class="text-lg">dlbcrochester@gmail.com</p>
       </div>
     </div>
