--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <!-- Navbar -->
-<nav class="bg-white fixed top-0 left-0 w-full z-50">
+<nav class="bg-gray fixed top-0 left-0 w-full z-50">
   <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
     
     <!-- Logo -->
