--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 
 <!-- Navbar -->
-<nav class="bg-gray fixed top-0 left-0 w-full z-50">
+<nav class="bg-white fixed top-0 left-0 w-full z-50">
   <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
     
     <!-- Logo -->
     <a href="index.html" class="flex items-center space-x-2">
       <img src="./Pics/logo.png" alt="Logo" class="h-10 w-10 object-contain">
-      <span class="script-font text-4xl md:text-5xl font-bold text-black-900">Deeper Life Bible Church Rochester NY</span>
+      <span class="script-font text-4xl lg:text-5xl font-bold text-black-900">Deeper Life Bible Church Rochester NY</span>
     </a>
 
     <!-- Nav Links -->
@@ -142,8 +142,8 @@
       </h1>
     </div>
 
-    <p class="text-2xl md:text-3xl max-w-2xl text-gray-200">
-      Holiness unto the Lord is our watchword and song — a call to purity,
+    <p class="text-2xl md:text-3xl max-w-2xl md:max-w-3xl text-white">
+      Holiness unto the Lord is our watchword and song. This is a call to purity,
       a life of purpose, and a passion for reaching the lost with the message of salvation.
     </p>
 
@@ -365,7 +365,7 @@
     <!-- Text Content -->
     <div class="flex-1 text-gray-700 space-y-5">
       <p class="text-lg leading-relaxed">
-        Beloved, it is with joy that I welcome you to Deeper Life Bible Church Rochester, NY — 
+        Beloved, it is with joy that I welcome you to Deeper Life Bible Church Rochester, NY. We are 
         a family where hearts are mended, faith is strengthened, and lives are transformed by 
         the power of God’s Word.
       </p>
@@ -650,7 +650,7 @@
       <!-- Church Logo -->
       <div class="flex items-center space-x-3 mb-4">
         <img src="./Pics/logo.png" alt="Church Logo" class="h-12 w-12 object-contain">
-        <h3 class="script-font text-2xl font-semibold text-white">Deeper Life Bible Church Rochester NY</h3>
+        <h3 class="script-font text-3xl font-semibold text-white">Deeper Life Bible Church Rochester NY</h3>
       </div>
 
       <!-- Address -->
