--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!-- Logo -->
     <a href="index.html" class="flex items-center space-x-2">
       <img src="./Pics/logo.png" alt="Logo" class="h-10 w-10 object-contain">
-      <span class="script-font text-4xl lg:text-5xl font-bold text-black-900">Deeper Life Bible Church Rochester NY</span>
+      <span class="script-font text-4xl font-bold text-black-900">Deeper Life Bible Church Rochester NY</span>
     </a>
 
     <!-- Nav Links -->
-    <ul class="hidden md:flex space-x-8 text-gray-700 font-medium">
+    <ul class="hidden md:flex space-x-8 text-gray-700 font-bold text-lg">
       <li><a href="index.html" class="hover:text-red-600 transition">Home</a></li>
       <li><a href="about.html" class="hover:text-red-600 transition">About Us</a></li>
       <li><a href="#locations" class="hover:text-red-600 transition">Locations</a></li>
@@ -60,7 +60,7 @@
 </nav>
 
 <!-- Info Bar -->
-<section class="bg-[#061c36] text-white mt-24 md:mt-20 text-md py-4 md:fixed top-0 left-0 z-50 w-full">
+<section class="bg-[#061c36] text-white mt-24 md:mt-16 text-md py-4 md:fixed top-0 left-0 z-50 w-full">
   <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-right justify-between gap-6 md:gap-0">
     
     <!-- Address -->
